# any-agent-sdk

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASING.md  SEMVER.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
any_agent_sdk/: __init__.py  agent.py  bench.py  budget.py  capabilities.py  claude_compat.py  cli.py  compact.py  compat_query.py  errors.py  events.py  hooks.py  http.py  memory.py  paths.py  permissions.py  query.py  response_format.py  retry.py  routing.py  session.py  settings.py  setup_local.py  setup_local_llamacpp.py  skills.py  subagent.py  system_reminder.py  tools.py  tracing.py  transcripts.py  types.py
any_agent_sdk/builtin_tools/: __init__.py  web.py
any_agent_sdk/examples/: fireworks_hosted.py  max_budget_usd.py  mcp_calculator.py  mcp_filesystem.py  multi_agent_research.py  ollama_local.py  quick_start.py  quickstart.py  research_agent.py  stderr_callback_example.py  streaming_mode_ipython.py  streaming_render.py  system_prompt.py  tools_option.py  vllm_self_hosted.py  with_thinking.py  with_tracing.py
any_agent_sdk/mcp/: __init__.py  client.py  server.py  types.py
any_agent_sdk/providers/: __init__.py  anthropic.py  anthropic_passthrough.py  base.py  llamacpp.py  mock.py  modal_provider.py  ollama.py  openai_compat.py  tgi.py
any_agent_sdk/streaming/: __init__.py  executor.py  text_tool_parser.py  thinking_parser.py
docs/: index.md  plan.md  upstream-comparison.md
docs/api/: client.md  errors.md  index.md  messages.md  options.md  sessions.md  tools.md
docs/development/: plan-v1.md
docs/examples/: index.md
docs/getting-started/: configuration.md  index.md  installation.md  local-setup.md  quickstart.md
docs/guides/: budget.md  hooks.md  index.md  mcp.md  memory.md  models-and-backends.md  permissions.md  plugins.md  sessions.md  streaming.md  sub-agents.md  thinking.md  (+1 more)
tests/: conftest.py  public_api_surface.txt  run_verbatim_examples.py  test_anthropic_passthrough.py  test_anyagent_directory.py  test_backend_routing.py  test_capabilities.py  test_claude_examples_verbatim.py  test_claude_sdk_parity.py  test_docs_site.py  test_example_fireworks_hosted.py  test_example_vllm_self_hosted.py  test_examples_multi_backend.py  test_kimi_routing.py  test_long_horizon.py  test_mcp_elicitation.py  test_mcp_sampling.py  test_mcp_tools_bridging.py  test_mid_stream_cancellation.py  test_modal_provider.py  test_permission_denials_in_result.py  test_permission_denials_surfaced.py  test_permission_updated_input.py  test_plugin_wiring.py  test_production_polish.py  test_public_api_surface.py  test_query_wrapper.py  test_real_kimi.py  test_real_ollama.py  test_release_artifacts.py  test_response_format.py  test_run_loop_integration.py  test_session_fork_resume.py  test_setting_sources.py  test_setup_local.py  test_setup_local_llamacpp.py  test_streaming_completions.py  test_streaming_mode.py  test_streaming_query.py  test_streaming_tool_dispatch.py  (+8 more)
(+6 files in other folders)
