[project]
name = "any-agent-sdk"
version = "0.0.1"
description = "Drop-in open-source agent SDK. Multi-model, streaming, MCP, sub-agents."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "msgspec>=0.18.6",
    "httpx[http2]>=0.27",
    "anyio>=4.4",
]

[project.optional-dependencies]
anthropic = []  # uses httpx directly, no SDK dep
openai = []
gemini = []
bedrock = ["boto3>=1.34"]
all = ["any-agent-sdk[bedrock]"]
dev = ["pytest>=8", "pytest-anyio>=0.0", "ruff>=0.5", "respx>=0.21"]

[project.scripts]
any-agent = "any_agent_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
